k8s/42-argo-workflows-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-events-webhook
  namespace: workflows
spec:
  rules:
  - host: argo-events.localhost
    http:
      paths:
      - path: /example
        pathType: Prefix
        backend:
          service:
            name: webhook-eventsource-svc
            port:
              number: 12000
